Add Leads table

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   /* Neobrutalism Colors */
-  --neo-pink: #FF006E;
+  --neo-pink: #00a2b5;
   --neo-yellow: #FFBE0B;
   --neo-blue: #3A86FF;
   --neo-bg: #FFFBF5;
